--- a/authenticate/templates/authenticate/login.html
+++ b/authenticate/templates/authenticate/login.html
@@ -1,31 +1,23 @@
 {% extends 'authenticate\loginTemplate.html' %}
 {% block content %}
+<div class="col-md-6 offset-md-3">
 
-
-<div class="col-6 col-md-3">
-        
     <form method="POST">
-
         {% csrf_token %}
         <div class="form-group">
-            <label for="exampleDropdownFormEmail2">Username</label>
-            <input type="email" class="form-control" id="exampleDropdownFormEmail2" placeholder="Traveler" name="username">
+       
+          <input type="text" class="form-control"  placeholder="Enter email" name="username">
+          
         </div>
         <div class="form-group">
-            <label for="exampleDropdownFormPassword2">Password</label>
-            <input type="password" class="form-control" id="exampleDropdownFormPassword2" placeholder="Password" name="password">
+         
+          <input type="password" class="form-control" placeholder="Password" name="password">
         </div>
-        <div class="form-group">
-            <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="dropdownCheck2">
-            <label class="form-check-label" for="dropdownCheck2">
-                Remember me
-            </label>
-            </div>
-        </div>
-        <button type="button" class="btn btn-outline-success" >Travel !</button>
-    </form>
     
+        <button type="submit" class="btn btn-primary">Travel !</button>
+    </form>
+
 </div>
+
 
 {% endblock %}
